--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,7 @@
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         {% endblock %}
 
         {% block javascripts %}
@@ -14,6 +15,16 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <header>
+            {% block navbar %}
+                {{ include('includes/_navbar.html.twig', {current: app.request.attributes.get('_route')}, with_context = false) }}
+            {% endblock %}
+        </header>
+        <main class="pt-5">
+            {% block body %}{% endblock %}
+        </main>
+    <aside>
+        {{ render_esi(controller('App\\Controller\\MovieController::decades')) }}
+    </aside>
     </body>
 </html>
