--- a/templates/hello/index.html.twig
+++ b/templates/hello/index.html.twig
@@ -15,6 +15,7 @@
     <ul>
         <li>Your controller at <code><a href="{{ '/home/benjamin/Dev/sl/formations/training-lesechos/src/Controller/HelloController.php'|file_link(0) }}">src/Controller/HelloController.php</a></code></li>
         <li>Your template at <code><a href="{{ '/home/benjamin/Dev/sl/formations/training-lesechos/templates/hello/index.html.twig'|file_link(0) }}">templates/hello/index.html.twig</a></code></li>
+        <li><img src="{{ asset('build/images/31116_JssY.jpeg') }}"></li>
     </ul>
 </div>
 {% endblock %}
