--- a/templates/includes/_decades.html.twig
+++ b/templates/includes/_decades.html.twig
@@ -1,7 +1,7 @@
-<ul>
+<ul class="nav nav-pills flex-column pt-5">
     {% for decade in decades %}
-        <li>Movies from the {{ decade }}'s</li>
+            <li class="nav-item"><a href="" class="nav-link">Movies from the {{ decade }}'s</a></li>
     {% else %}
-        <li>No movie yet...</li>
+        <li class="nav-item">No movie yet...</li>
     {% endfor %}
 </ul>
