--- a/templates/book/new.html.twig
+++ b/templates/book/new.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MainController!{% endblock %}
+{% block title %}Hello BookController!{% endblock %}
 
 {% block body %}
 <div class="example-wrapper">
-    <h1>Contact form</h1>
+    <h1>New Book</h1>
 
-    {{ form_start(form) }}
+    {{ form_start(form, {'attr': {'novalidate'}}) }}
         {{ form_widget(form) }}
         <button type="submit" class="btn btn-primary">Send</button>
     {{ form_end(form) }}
