--- a/templates/book/new.html.twig
+++ b/templates/book/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello BookController!{% endblock %}
+{% block title 'New Book' %}
 
 {% block body %}
 <div class="example-wrapper">
