--- a/templates/hello/index.html.twig
+++ b/templates/hello/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HelloController!{% endblock %}
+{% block title 'Hello' %}
 
 {% block body %}
 <div class="example-wrapper">
