--- a/templates/main/contact.html.twig
+++ b/templates/main/contact.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MainController!{% endblock %}
+{% block title 'Contact' %}
 
 {% block body %}
 <div class="example-wrapper">
