--- a/templates/movie/show.html.twig
+++ b/templates/movie/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Movie :{{ movie.title ?? 'Unknown' }}{% endblock %}
+{% block title %}Movie :{{ movie.title ?? 'Not found' }}{% endblock %}
 
 {% block body %}
 <div class="example-wrapper">
