--- a/templates/movie/show.html.twig
+++ b/templates/movie/show.html.twig
@@ -16,6 +16,18 @@
             </ul>
         </li>
     </ul>
+        <section class="row">
+            <div class="col-md-6">
+                <form method="get" action="{{ path('app_movie_payment', {'paymentType': 'stripe'}) }}">
+                    <button class="btn">Stripe</button>
+                </form>
+            </div>
+            <div class="col-md-6">
+                <form method="get" action="{{ path('app_movie_payment', {'paymentType': 'paypal'}) }}">
+                    <button class="btn">Paypal</button>
+                </form>
+            </div>
+        </section>
     {% else %}
         <h1>Movie not found.</h1>
     {% endif %}
