--- a/templates/movie/index.html.twig
+++ b/templates/movie/index.html.twig
@@ -9,7 +9,7 @@
         <section class="row row-cols-3 mt-5">
             {% for movie in movies %}
                 <div class="col">
-                    <a href="{{ path('app_movie_details', {'id': movie.id}) }}">
+                    <a href="{{ path('app_movie_show', {'id': movie.id}) }}">
                         <div class="card w-75">
                             <img src="{{ movie.poster }}" alt="{{ movie.poster }}">
                             <div class="card-img-overlay text-white">
