--- a/templates/includes/_navbar.html.twig
+++ b/templates/includes/_navbar.html.twig
@@ -15,5 +15,16 @@
                 <a class="nav-link{{ current != 'app_main_contact' ? '' : ' active' }}" href="{{ path('app_main_contact') }}">Contact</a>
             </li>
         </ul>
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            {% if not app.user %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_login') }}">Login</a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+                </li>
+            {% endif %}
+        </ul>
     </div>
 </nav>
